#785: Add some test for snapshot error threshold